benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/debug/bignums_Sub_NormalizeBitstring_iter5_error.log
=== Verification Error - Iteration 5 ===
File: benchmarks/verus/bignum/files/bignums_Sub_NormalizeBitstring.rs
Time: 2025-09-15 11:02:34

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error[E0308]: `if` and `else` have incompatible types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignums_Sub_NormalizeBitstring_impl.rs:38:17
   |
35 |               } else if i == seq.len() as int {
   |  ____________________-
36 | |                 let _ = c;
   | |                 ---------- expected because of this
37 | |             } else {
38 | |                 false
   | |                 ^^^^^ expected `()`, found `bool`
39 | |             }
   | |_____________- `if` and `else` have incompatible types

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignums_Sub_NormalizeBitstring_impl.rs:77:50
   |
77 |                 valid_bitstring_push_bit(res@, s[i]);
   |                                                --^-
   |                                                | |
   |                                                | expected `int`, found `usize`
   |                                                arguments to this method are incorrect
   |
note: method defined here
  --> /Users/runner/work/verus/verus/source/vstd/slice.rs:28:13

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.

--------------------------------------------------------------------------------

Additional Output:
error[E0308]: `if` and `else` have incompatible types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignums_Sub_NormalizeBitstring_impl.rs:38:17
   |
35 |               } else if i == seq.len() as int {
   |  ____________________-
36 | |                 let _ = c;
   | |                 ---------- expected because of this
37 | |             } else {
38 | |                 false
   | |                 ^^^^^ expected `()`, found `bool`
39 | |             }
   | |_____________- `if` and `else` have incompatible types

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignums_Sub_NormalizeBitstring_impl.rs:77:50
   |
77 |                 valid_bitstring_push_bit(res@, s[i]);
   |                                                --^-
   |                                                | |
   |                                                | expected `int`, found `usize`
   |                                                arguments to this method are incorrect
   |
note: method defined here
  --> /Users/runner/work/verus/verus/source/vstd/slice.rs:28:13

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
